...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Login with Facebook"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                <color key="backgroundColor" red="1" green="0.13055997089999999" blue="0.10978112249999999" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Authorize HealthKit"/>
                                <connections>
                                    <action selector="authorizeHealthKit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gbV-Gk-9zp"/>
...
                                <rect key="frame" x="182" y="102" width="83" height="30"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                <state key="normal" title="Add Friends"/>
                                <connections>
                                    <action selector="addFriends:" destination="Xhu-y7-QXT" eventType="touchUpInside" id="E0O-Zh-P7p"/>
...
                                <items>
                                    <navigationItem title="Profile" id="P3J-Th-3UT">
                                        <barButtonItem key="rightBarButtonItem" title="Store" id="5RG-Va-L2g"/>
                                    </navigationItem>
                                </items>
...
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Game" id="gUB-tl-w9F"/>
                    <navigationItem key="navigationItem" title="Game Workout" id="ABL-dh-SbM"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDm-Ph-cEj">
                                                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                    <state key="normal" title="Get it!"/>
                                                    <connections>
                                                        <action selector="getProteinBar:" destination="1Kl-aF-Fth" eventType="touchUpInside" id="jvt-J3-Q8A"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fitness Bands" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Wq-Vw-PAM">
                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beats Headphones" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wl8-GG-2BY">
                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
